# xiaoyi

./: .dockerignore  .env.example  .gitignore  README.md  SSEHelper.md  docker-compose.yml  nginx.conf  package-lock.json  xiaoyi-rag-service - Swagger UI.html
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  agent_config.py  base.py  error_explainer.py  event_summary_agent.py  finance_agent.py  intent_agent.py  news_summary_agent.py  nlp_agent.py  rag_agent.py  report_agent.py  sentiment_agent.py  suggestion_agent.py
backend/app/api/: api.py
backend/app/core/: auth.py  config.py  redis_client.py  session.py  session_manager.py  step_definitions.py  streaming_task_processor.py  tasks.py  unified_tasks.py  utils.py
backend/app/data/: __init__.py  fetcher.py  layer.py  models.py  rag_searcher.py  stock_db.py  tavily_client.py
backend/app/forecasting/: __init__.py  analyzer.py  arima_forecaster.py  base.py  dlinear_forecaster.py  prophet_forecaster.py  xgboost_forecaster.py
backend/app/models/: __init__.py  base.py  chat.py  dlinear.py  prophet.py  randomforest.py  seasonal_naive.py  xgboost.py
backend/app/rag/: config.py  embedding.py
backend/app/schemas/: session_schema.py  sse_schema.py  stock_news_schema.py  unified_analysis_schema.py
backend/app/sentiment/: __init__.py  analyzer.py
backend/scripts/: gdelt_query.py  init_stock_collection.py  upload_stocks_to_rag.py
backend/tests/: conftest.py  pytest.ini  test_api.py  test_data_layer.py  test_data_layer_quick.py
(+105 files in other folders)
